# lyricsync

./: .gitignore  README.md  pyproject.toml
lyricsync/: __init__.py  app.py  cli.py  config.py
lyricsync/core/: alignment.py  audio.py  model.py  pipeline.py  separation.py  syllables.py  transcription.py
lyricsync/exporters/: __init__.py  embed.py  timed_text.py
lyricsync/gui/: editor.py  main_window.py  models_page.py  queue_page.py  settings_page.py  waveform.py  workers.py
lyricsync/models/: catalog.py  downloader.py  manifest.py
lyricsync/utils/: logs.py  paths.py
tests/: test_alignment.py  test_exporters.py  test_manifest.py  test_model.py  test_syllables.py
