[project]
name = "lyricsync"
version = "0.1.0"
description = "Local lyrics timing & karaoke generator — vocal separation + Whisper transcription to LRC/eLRC/SRT/VTT/ASS with embedded synced lyrics"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
dependencies = [
    "PySide6>=6.7,<7",
    "faster-whisper>=1.1,<2",
    "audio-separator[gpu]>=0.30",
    "mutagen>=1.47",
    "platformdirs>=4.2",
    "httpx>=0.27",
    "pyphen>=0.14",
    "numpy>=1.26",
    "soundfile>=0.12",
    # transitive floor: old numba/llvmlite picked by backtracking cannot build on 3.12
    "numba>=0.60",
    # faster-whisper's ctranslate2 backend is built against CUDA 12 and looks for
    # libcublas.so.12 / libcudnn.so.9 specifically; torch's own CUDA 13 wheels don't
    # provide those, so pull the cu12 runtime libs explicitly (no macOS wheels exist).
    "nvidia-cublas-cu12>=12.4; sys_platform != 'darwin'",
    "nvidia-cudnn-cu12>=9.1; sys_platform != 'darwin'",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
lyricsync-cli = "lyricsync.cli:main"

[project.gui-scripts]
lyricsync = "lyricsync.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lyricsync"]

[tool.pytest.ini_options]
testpaths = ["tests"]
